Added Makefile template and a working dir for debugger class.

--- a/test-binary-search-tree/Makefile
+++ b/test-binary-search-tree/Makefile
@@ -1,5 +1,5 @@
 ##########################################################################
-## MAKEFILE FOR TEST FOR BST-TEMPLATE					##
+## MAKEFILE: BST-TEMPLATE           					                ##
 ##########################################################################
 TMPL		:= ../_dtl
 HDIR 		:= hdr
@@ -24,7 +24,7 @@ $(EXET) : $(OBJS)
 
 
 ##########################################################################
-## CLEAN TASK								##
+## CLEAN TASK								                            ##
 ##########################################################################
 .PHONY: clean
 clean:
