--- a/test-debugger-class/Makefile
+++ b/test-debugger-class/Makefile
@@ -1,7 +1,7 @@
 
-##########################################################################
-## MAKEFILE: DEBUGGER TEMPLATE      					                ##
-##########################################################################
+##################################################################
+## MAKEFILE: DEBUGGER CLASS                                     ##
+##################################################################
 HDIR		:= hdr
 SDIR		:= src
 ODIR		:= obj
@@ -9,3 +9,28 @@ ODIR		:= obj
 EXET		:= a
 OBJS		:= main.o testDebugger.o
 OSRC		:= $(addprefix $(ODIR)/, $(OBJS))
+
+CXX			:= g++
+CXXFLAGS	:= -I$(HDIR) -g -Wall -std=c++2a \
+				-Wextra -Wconversion -pedantic
+
+##################################################################
+## BUILD DIRECTIVE:                                             ##
+##################################################################
+all : $(EXET)
+
+$(EXET) : $(OSRC)
+	$(CXX) $(CXXFLAGS) $^ -o $@
+
+$(ODIR)/%.o : $(SDIR)/%.cpp | $(ODIR)
+	$(CXX) -c $(CXXFLAGS) $^ -o $@
+
+$(ODIR):
+	@if [ ! -d "$(ODIR)" ]; then mkdir $(ODIR); fi
+
+##################################################################
+## CLEAN TASK:
+##################################################################
+.PHONY: clean
+clean:
+	rm -r $(EXET) $(ODIR)
