--- a/lab/binary-search-tree/Makefile
+++ b/lab/binary-search-tree/Makefile
@@ -1,7 +1,8 @@
 ##########################################################################
 ## MAKEFILE: BST-TEMPLATE           					                ##
 ##########################################################################
-TMPL		:= ../_dtl
+TMPL		:= /home/karl/git.mine/cpp/templ_headers
+
 HDIR 		:= hdr
 SDIR		:= src
 
